<resources>
    <string name="app_name">IRS-Hard-drives</string>
    <string name="main_activity_text">Домашняя страница</string>
    <string name="search_text">Поиск…</string>
    <string name="added_data_text">Добавление данных</string>
    <string name="creating_disk_text">Создать диск</string>

    <string name="input_name_text">Введите название…</string>
    <string name="input_description_text">Введите описание…</string>
    <string name="input_manufacture_text">Введите производителя…</string>
    <string name="input_sizeDisk_text">Введите размер диска…</string>

    <string name="description_banner_text">Описание</string>
    <string name="description_name_text">Название модели</string>
    <string name="description_size_text">Размер жёсткого диска</string>
    <string name="description_company_text">Производитель</string>
    <string name="description_text">Описание жёсткого диска…</string>

    <string name="delete_banner_text">Выберите для удаления</string>

    <string name="login_enter_text">Вход</string>
    <string name="login_inputName_text">Введите имя…</string>
    <string name="login_inputPassword_text">Введите пароль…</string>
    <string name="button_enter_text">Вход</string>
    <string name="login_username_text">Имя пользователя</string>
    <string name="login_password_text">Пароль</string>
    <string name="login_forgotPassword_text">Забыли пароль?</string>
    <string name="login_enterGuest_text">Зайти как гость</string>
</resources>